--- a/word_and_countryfinding_3.ipynb
+++ b/word_and_countryfinding_3.ipynb
@@ -6,7 +6,7 @@
       "name": "word and countryfinding_3.ipynb",
       "provenance": [],
       "mount_file_id": "1WLaQFEWZEn5iCXJZq8y6Le2f8LNrRBT4",
-      "authorship_tag": "ABX9TyMC7q5L8EApGKF7YsI+tTFD",
+      "authorship_tag": "ABX9TyMs1OyyBU0j7wkXd3/oYdnV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -355,14 +355,63 @@
         "\n",
         "  Country_ids = [database_train.get_id_by_country(country) for country in countries]\n",
         "  target = torch.LongTensor(Country_ids)\n",
+        "  print(\"\\ncountry_ids\", Country_ids.shape, type(Country_ids), Country_ids)\n",
+        "  print(\"\\nTarget\", target.shape, type(target), target)\n",
         "\n",
         "  return word_packed, target\n",
         "\n",
         "def ascii(word):\n",
         "  word_asc = [ord(cha) for cha in word]\n",
-        "  return torch.LongTensor(word_asc), len(word_asc)\n"
+        "  return torch.LongTensor(word_asc), len(word_asc)"
       ],
       "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3ah7s-6iA706",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class net(nn.Module):\n",
+        "  def __init__(self,batch_size, hidden_size, values):\n",
+        "    super.__init__(self)\n",
+        "    self.vocab_size = batch size #(it is no of unique words now its a whole batch)\n",
+        "    Embessing dim = hidden_size # how many input hudden layer can take for each word.\n",
+        "    #lenth of each word ie after padding  no (its acharacter)\n",
+        "    self.embed = torch.nn.Embedding(num_embedding = batch_size , embedding_dim = hidden_size ) # for each word we will get many output = (eq = input to hidden) \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "  def forward(self, word_packed):\n",
+        "    self.input = word_packed #B*S to S*B\n",
+        "    self.input = input.t() # #B*S to S*B\n",
+        "\n",
+        "    #S*B ==> S *B *E\n",
+        "    print(\"\\nTarget\", word_packed.shape, type(word_packed), word_packed)\n",
+        "    output = self.embed(self.input) \\\n",
+        "\n",
+        "    print(\"\\nTarget\", output.shape, type(output), output)\n",
+        "\n",
+        "    hidden_0 = hidden_init(batc)\n",
+        "\n",
+        "\n",
+        "  def hiddden_init(self, batch_size):\n",
+        "    h_0 = torch.zeros(self.Num_layer*self.num_direc, batch_size, self.hidden_size)\n",
+        "    retrun h_0\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
